--- a/styles/Cart.css
+++ b/styles/Cart.css
@@ -132,7 +132,7 @@
 
 .cart-totals h2 {
   font-size: 1.5rem;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
 
 .cart-totals-item {
@@ -151,7 +151,7 @@
   transition: background-color 0.3s;
   text-align: center;
   display: block;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .cart-actions {
