--- a/styles/Home.css
+++ b/styles/Home.css
@@ -103,7 +103,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-  margin-top: 20px;
+  margin: 20px;
   padding: 20px;
 }
 
@@ -160,5 +160,5 @@
 
 .swiper-button-next,
 .swiper-button-prev {
-  color: balck !important;
+  color: #8c1ceb !important;
 }
