--- a/styles/Products.css
+++ b/styles/Products.css
@@ -67,6 +67,7 @@
 
 .product-price {
   font-weight: bold;
+  color: #f88e32;
   margin: 10px 0;
 }
 
